# pgauthz

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  bootstrap.sh  compose-authzen.yml  compose-cel.yml  compose-keycloak.yml  compose-metrics.yml  compose-opa.yml  compose-playground.yml  compose-replication.yml  compose-scaling.yml  compose.yml  env.sh  init-readonly.sh  init.sh  reload-engine.sh  start.sh  stop.sh  upgrade.sh
.github/: CODEOWNERS
authzctl/: README.md  cmd_export.go  cmd_import.go  cmd_modeltest.go  cmd_plan.go  go.mod  go.sum  main.go  notation.go  version.go
authzen/: Dockerfile  README.md  go.mod
bench/: README.md  run.sh
docs/: ARCHITECTURE.md  BENCHMARKS.md  DESIGN.md  DEVELOPMENT.md  MODEL_DESIGN.md  PRODUCTION.md  RELEASING.md  SECURITY-AUDIT.md  architecture-colocated.puml  architecture-enterprise-iam.puml  architecture-full.puml  architecture-minimal.puml  architecture-read-scaled.puml  architecture-token-flow.puml  architecture-write-api.puml
extensions/: README.md
extensions/pg-cel/: .gitignore  Cargo.toml  Dockerfile  README.md  pg_cel.control
extensions/pg-cel/src/: lib.rs
gateway/: nginx.conf
keycloak/: README.md  get-token.sh
opa/: README.md  hooks-v1-http-capabilities.json  http-client.env.json  requests-check-access.http  requests-native-read.http  requests-native-write.http  requests-postgrest-read.http  requests-postgrest-write.http  requests-writer-security-check.http
pgauthzctl/: README.md  cmd_export.go  cmd_import.go  cmd_modeltest.go  cmd_plan.go  (+5 more)
(+348 files in other folders)
